--- a/scss/preferences/_file_renaming.scss
+++ b/scss/preferences/_file_renaming.scss
@@ -7,8 +7,7 @@
 }
 
 #file-renaming-format-template {
-	width: 100%;
-	min-height: 1.25em;
+	min-height: 3.25em;
 	padding: 0.4em;
 	/* Match label margins */
 	margin-block: 1px 2px;
@@ -16,6 +15,5 @@
 }
 
 #file-renaming-format-preview {
-	width: 100%;
 	padding: 0.4em;
 }
